// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlexCol /> should render correctly 1`] = `
<div
  className="flex flex-col "
>
  <div />
</div>
`;

exports[`<FlexRow /> should render correctly 1`] = `
<div
  className="flex flex-row "
>
  <div />
</div>
`;
